--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                 honing my skills in creating addons, custom maps, and mash-ups.</p><br>
             <p>Through dedication and continuous learning, I now collaborate with Marketplace teams, turning ideas into
                 creative and functional projects. My goal is always to innovate, bringing new mechanics, textures, and
-                adventures to players.</p>
+                adventures to players.</p><br>
+            <p>Nick Discord: allan.z</p>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/alan-feij%C3%B3-b58037302/"><i
+                <a href="https://www.linkedin.com/in/alan-feij%C3%B3-b58037302/" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/allanzdev"><i class="fa-brands fa-github"></i></a>
-                <a href="https://x.com/AllanzOffDev"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://github.com/allanzdev" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/AllanzOffDev" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
             <a href="https://discord.com/channels/@me/1023010446703341638" class="btn" target="_blank">Hire me</a>
         </div>
@@ -92,19 +93,19 @@
             <div class="project">
                 <div class="project-container">
                     <div class="project-item">
-                        <a href="https://github.com/allanzdev/projeto1" target="_blank">
+                        <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=94fed1d7-f504-4845-aa01-d54153de3986" target="_blank">
                             <img src="imgs/project1.png" alt="Projeto 1">
                             <p>Dungeons && Bosses</p>
                         </a>
                     </div>
                     <div class="project-item">
-                        <a href="https://github.com/allanzdev/projeto2" target="_blank">
+                        <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=23fff293-aadd-4f83-8186-403ad3157228" target="_blank">
                             <img src="imgs/project2.png" alt="Projeto 2">
                             <p>Backpacks & Jetpacks</p>
                         </a>
                     </div>
                     <div class="project-item">
-                        <a href="https://github.com/allanzdev/projeto3" target="_blank">
+                        <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=548b99ff-688e-4689-a0fd-354f4e32e698" target="_blank">
                             <img src="imgs/project3.png" alt="Projeto 3">
                             <p>Weapons & Armors</p>
                         </a>
